src/objects/BHAT_Activity_Daily__c.object
<CustomObject>
    <description>BHAT</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Activity Date</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approved By</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BHAT_Activity_Daily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Weekly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BHAT Activity Weekly</label>
        <referenceTo>BHAT_Activity_Weekly__c</referenceTo>
        <relationshipLabel>BHAT Activity Daily</relationshipLabel>
        <relationshipName>BHAT_Activity_Daily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Hours_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily Hours Spent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Hours_Total__c</fullName>
        <formula>Daily_Hours_Spent__c + Time_Off_Total__c  + Paid_Break_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Total Paid Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Overtime_Hours__c</fullName>
        <description>Over time hours</description>
        <formula>IF(AND( 
Time_Difference__c == (Daily_Hours_Spent__c+ Time_Off_Total__c + Paid_Break_Total__c + Unpaid_Lunch_Total__c ), AND($User.Hourly_Employee__c, $User.Non_Exempt_Employee__c), AND(Daily_Hours_Total__c !=0 , Daily_Hours_Total__c &gt; 8) 
), Daily_Hours_Total__c - 8, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Paid Hours - 8 hours to caluclaute Over time hours</inlineHelpText>
        <label>Daily Overtime Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateMonth__c</fullName>
        <label>EndDateMonth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateWeek__c</fullName>
        <label>EndDateWeek</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <formula>Owner:User.Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Employee__c</fullName>
        <formula>Owner:User.Hourly_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly_Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoursWorked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HoursWorked</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>TEXT(ABS((VALUE( TRIM( LEFT(   Work_Hour_Start_Time__c   ,2) ) )-12 ) )   +  
         (VALUE(TRIM(LEFT(   Work_Hour_End_Time__c   ,2) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Worked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Owner:User.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.SOS_Manager_Name__c</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mins__c</fullName>
        <formula>TEXT(ABS(value(

TEXT(VALUE(TEXT(ABS(VALUE(TRIM( LEFT(RIGHT( Work_Hour_Start_Time__c , 5),2 )) )))) - VALUE( TEXT(ABS(VALUE(TRIM( LEFT(RIGHT( Work_Hour_End_Time__c , 5),2 )) )))))

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mins Worked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinutesWorked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MinutesWorked</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Exempt_Employee__c</fullName>
        <formula>Owner:User.Non_Exempt_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non_Exempt_Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPEIU_Graveyard_Swing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPEIU Graveyard/Swing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Break_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Break Total</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_No__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReturnedDate__c</fullName>
        <label>ReturnedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDateMonth__c</fullName>
        <label>StartDateMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>No Entry</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Submitted Date</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <formula>Owner:User.Term_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Difference__c</fullName>
        <formula>VALUE( TEXT( HoursWorked__c ) + &apos;.&apos;+ TEXT(  MinutesWorked__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the time difference between WorkStartTime and WorkEndTime to be matched with Daily_Hours_Spent to update the status field through workflow</inlineHelpText>
        <label>Time Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Off Total</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Lunch_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unpaid Lunch Total</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_City__c</fullName>
        <formula>Owner:User.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekStartDate__c</fullName>
        <formula>BHAT_Activity_Weekly__r.WeekStartDate__c</formula>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Hour_End_Time__c</fullName>
        <label>Work Hour End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Hour_Start_Time__c</fullName>
        <label>Work Hour Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BHAT Activity Daily</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Daily_Hours_Total__c</columns>
        <columns>Status__c</columns>
        <columns>Time_Difference__c</columns>
        <columns>Non_Exempt_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chris_Buckles_Records</fullName>
        <columns>Work_Hour_End_Time__c</columns>
        <columns>Work_Hour_Start_Time__c</columns>
        <columns>NAME</columns>
        <columns>BHAT_Activity_Weekly__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>HoursWorked__c</columns>
        <columns>Mins__c</columns>
        <columns>EndDateMonth__c</columns>
        <columns>EndDateWeek__c</columns>
        <columns>Hours__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MinutesWorked__c</columns>
        <columns>ReturnedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kbenzie</value>
        </filters>
        <label>Kim Benzie</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Emp</fullName>
        <columns>Work_Hour_End_Time__c</columns>
        <columns>Work_Hour_Start_Time__c</columns>
        <columns>NAME</columns>
        <columns>BHAT_Activity_Weekly__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>HoursWorked__c</columns>
        <columns>Mins__c</columns>
        <columns>EndDateMonth__c</columns>
        <columns>EndDateWeek__c</columns>
        <columns>Hours__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MinutesWorked__c</columns>
        <columns>ReturnedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>price</value>
        </filters>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Emp</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>BHAT Activity Daily Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BHAT Activity Daily</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>